--- a/frontend/src/components/Calendar/Calendar.css
+++ b/frontend/src/components/Calendar/Calendar.css
@@ -4,7 +4,7 @@
 
 .calendar-app-container {
   flex-grow: 1;
-  padding-left: 15vh;
+  padding-left: 5vh;
   padding-top: 2vh;
 }
 
@@ -13,15 +13,15 @@
   color: #043c5f;
   font-size: 2.5vh;
   display: flex;
-  width: 100vh;
+  width: 120vh;
   align-items: center;
   justify-content: space-between;
 }
 
 .calendar-days {
-  width: 100vh;
+  width: 120vh;
   display: grid;
-  grid-template-columns: repeat(5, 1fr);
+  grid-template-columns: repeat(7, 1fr);
   gap: 1vh;
   margin-bottom: 1vh;
 }
@@ -50,21 +50,21 @@
 
 .calendar-dates {
   display: grid;
-  grid-template-columns: repeat(5, 1fr);
-  gap: 1vh;
+  grid-template-columns: repeat(7, 1fr);
+  gap: 0.7vh;
 }
 
 .calendar-field {
-  width: 10vh;
+  width: 5vh;
   display: flex;
 }
 
 .calendar-date {
   text-align: right;
   padding: 1vh;
-  border-radius: 2vh;
-  width: 17vh;
-  height: 12vh;
+  border-radius: 1.7vh;
+  width: 14.5vh;
+  height: 10vh;
   font-size: 2.5vh;
   font-family: "Segoe UI";
   color: #043c5f;
@@ -83,8 +83,8 @@
   text-align: right;
   padding: 1vh;
   border-radius: 2vh;
-  width: 17vh;
-  height: 22vh;
+  width: 15vh;
+  height: 16vh;
   font-size: 2.5vh;
   font-family: "Segoe UI";
   color: #043c5f;
@@ -92,16 +92,16 @@
 }
 
 .calendar-weeks {
-  width: 100vh;
+  width: 121vh;
+  height: 110;
   display: grid;
-  grid-template-columns: repeat(5, 1fr);
-  gap: 1vh;
+  grid-template-columns: repeat(7, 1fr);
 }
 
 .calendar-btn-container {
   margin-top: 2vh;
   margin-right: 10vh;
-  width: 100vh;
+  width: 120vh;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -124,11 +124,16 @@
 }
 
 .Calendar-EventsContainer {
-  height: 14vh;
+  height: 9vh;
   overflow: auto;
-  scrollbar-width: thin;
+  scrollbar-width: none;
+  -ms-overflow-style: none;
+  border-radius: 1vh;
 }
-
+.Calendar-EventsContainer::-webkit-scrollbar {
+  width: 0;
+  height: 0;
+}
 .Calendar-MoreEvents {
   font-family: "Segoe UI";
   color: #043c5f;
